autotests/syntax-tests/tests/negative/negative62.sref
Name { Name $SWAP Name Name = ; = ; } ; 